--- a/java/res/values-pa/strings-emoji-descriptions.xml
+++ b/java/res/values-pa/strings-emoji-descriptions.xml
@@ -846,8 +846,8 @@
     <string name="spoken_emoji_1F50A" msgid="5818194948677277197">"ਤਿੰਨ ਅਵਾਜ਼ ਤਰੰਗਾਂ ਵਾਲਾ ਸਪੀਕਰ"</string>
     <string name="spoken_emoji_1F50B" msgid="8083470451266295876">"ਬੈਟਰੀ"</string>
     <string name="spoken_emoji_1F50C" msgid="7793219132036431680">"ਇਲੈਕਟ੍ਰਿਕ ਪਲਗ"</string>
-    <string name="spoken_emoji_1F50D" msgid="8140244710637926780">"ਖੱਬੇ-ਪਾਸੇ ਸੰਕੇਤ ਦੇਣ ਵਾਲਾ ਵਡਦਰਸ਼ੀ ਸ਼ੀਸ਼ਾ"</string>
-    <string name="spoken_emoji_1F50E" msgid="4751821352839693365">"ਸੱਜੇ-ਪਾਸੇ ਸੰਕੇਤ ਦੇਣ ਵਾਲਾ ਵਡਦਰਸ਼ੀ ਸ਼ੀਸ਼ਾ"</string>
+    <string name="spoken_emoji_1F50D" msgid="8140244710637926780">"ਖੱਬੇ-ਪਾਸੇ ਸੰਕੇਤ ਦੇਣ ਵਾਲਾ ਵੱਡਦਰਸ਼ੀ ਸ਼ੀਸ਼ਾ"</string>
+    <string name="spoken_emoji_1F50E" msgid="4751821352839693365">"ਸੱਜੇ-ਪਾਸੇ ਸੰਕੇਤ ਦੇਣ ਵਾਲਾ ਵੱਡਦਰਸ਼ੀ ਸ਼ੀਸ਼ਾ"</string>
     <string name="spoken_emoji_1F50F" msgid="915079280472199605">"ਸਿਆਹੀ ਦੇ ਪੈਨ ਨਾਲ ਤਾਲਾ"</string>
     <string name="spoken_emoji_1F510" msgid="7658381761691758318">"ਕੁੰਜੀ ਨਾਲ ਬੰਦ ਤਾਲਾ"</string>
     <string name="spoken_emoji_1F511" msgid="262319867774655688">"ਕੁੰਜੀ"</string>
