--- a/java/res/values-hi/strings-emoji-descriptions.xml
+++ b/java/res/values-hi/strings-emoji-descriptions.xml
@@ -447,7 +447,7 @@
     <skip />
     <string name="spoken_emoji_1F3A0" msgid="3572095190082826057">"घोड़े वाला झूला"</string>
     <string name="spoken_emoji_1F3A1" msgid="4300565511681058798">"फ़ेरिस झूला"</string>
-    <string name="spoken_emoji_1F3A2" msgid="15486093912232140">"घुमावदार रेल-पथ"</string>
+    <string name="spoken_emoji_1F3A2" msgid="15486093912232140">"रोलर कॉस्टर"</string>
     <string name="spoken_emoji_1F3A3" msgid="921739319504942924">"मछली पकड़ने का डंडा और मछली"</string>
     <string name="spoken_emoji_1F3A4" msgid="7497596355346856950">"माइक्रोफ़ोन"</string>
     <string name="spoken_emoji_1F3A5" msgid="4290497821228183002">"मूवी कैमरा"</string>
@@ -600,7 +600,7 @@
     <string name="spoken_emoji_1F418" msgid="7926161463897783691">"हाथी"</string>
     <string name="spoken_emoji_1F419" msgid="1055233959755784186">"ऑक्टोपस"</string>
     <string name="spoken_emoji_1F41A" msgid="5195666556511558060">"सर्पिल आवरण"</string>
-    <string name="spoken_emoji_1F41B" msgid="7652480167465557832">"बग"</string>
+    <string name="spoken_emoji_1F41B" msgid="7652480167465557832">"गड़बड़ी"</string>
     <string name="spoken_emoji_1F41C" msgid="1123461148697574239">"चींटी"</string>
     <string name="spoken_emoji_1F41D" msgid="718579308764058851">"मधुमक्खी"</string>
     <string name="spoken_emoji_1F41E" msgid="6766305509608115467">"मादा भौंरा"</string>
