--- a/java/res/values-pa/strings-talkback-descriptions.xml
+++ b/java/res/values-pa/strings-talkback-descriptions.xml
@@ -27,11 +27,11 @@
     <string name="spoken_auto_correct_obscured" msgid="7769449372355268412">"<xliff:g id="KEY_NAME">%1$s</xliff:g> ਆਟੋ-ਸੁਧਾਈ ਕਰਦੀ ਹੈ"</string>
     <string name="spoken_empty_suggestion" msgid="4250215619373459752">"ਕੋਈ ਸੁਝਾਅ ਨਹੀਂ"</string>
     <string name="spoken_description_unknown" msgid="5139930082759824442">"ਅਗਿਆਤ ਅੱਖਰ"</string>
-    <string name="spoken_description_shift" msgid="7209798151676638728">"ਸ਼ਿਫ਼ਟ"</string>
+    <string name="spoken_description_shift" msgid="7209798151676638728">"ਸ਼ਿਫਟ ਕੁੰਜੀ"</string>
     <string name="spoken_description_symbols_shift" msgid="3483198879916435717">"ਹੋਰ ਚਿੰਨ੍ਹ"</string>
-    <string name="spoken_description_shift_shifted" msgid="3122704922642232605">"ਸ਼ਿਫ਼ਟ"</string>
+    <string name="spoken_description_shift_shifted" msgid="3122704922642232605">"ਸ਼ਿਫਟ ਕੁੰਜੀ"</string>
     <string name="spoken_description_symbols_shift_shifted" msgid="5179175466878186081">"ਚਿੰਨ੍ਹ"</string>
-    <string name="spoken_description_caps_lock" msgid="1224851412185975036">"ਸ਼ਿਫ਼ਟ"</string>
+    <string name="spoken_description_caps_lock" msgid="1224851412185975036">"ਸ਼ਿਫਟ ਕੁੰਜੀ"</string>
     <string name="spoken_description_delete" msgid="3878902286264983302">"ਮਿਟਾਓ"</string>
     <string name="spoken_description_to_symbol" msgid="8244903740201126590">"ਚਿੰਨ੍ਹ"</string>
     <string name="spoken_description_to_alpha" msgid="4081215210530031950">"ਅੱਖਰ"</string>
@@ -44,10 +44,10 @@
     <string name="spoken_description_return" msgid="3183692287397645708">"ਵਾਪਸ ਜਾਓ"</string>
     <string name="spoken_description_search" msgid="5099937658231911288">"ਖੋਜੋ"</string>
     <string name="spoken_description_dot" msgid="5644176501632325560">"ਬਿੰਦੀ"</string>
-    <string name="spoken_description_language_switch" msgid="6818666779313544553">"ਭਾਸ਼ਾ ਸਵਿਚ ਕਰੋ"</string>
+    <string name="spoken_description_language_switch" msgid="6818666779313544553">"ਭਾਸ਼ਾ ਸਵਿੱਚ ਕਰੋ"</string>
     <string name="spoken_description_action_next" msgid="431761808119616962">"ਅੱਗੇ"</string>
     <string name="spoken_description_action_previous" msgid="2919072174697865110">"ਪਿਛਲਾ"</string>
-    <string name="spoken_description_shiftmode_on" msgid="5107180516341258979">"ਸ਼ਿਫ਼ਟ ਸਮਰਥਿਤ"</string>
+    <string name="spoken_description_shiftmode_on" msgid="5107180516341258979">"ਸ਼ਿਫਟ ਕੁੰਜੀ ਚਾਲੂ"</string>
     <string name="spoken_description_shiftmode_locked" msgid="7307477738053606881">"ਕੈਪਸ ਲੌਕ ਸਮਰਥਿਤ"</string>
     <string name="spoken_description_mode_symbol" msgid="111186851131446691">"ਚਿੰਨ੍ਹ ਮੋਡ"</string>
     <string name="spoken_description_mode_symbol_shift" msgid="4305607977537665389">"ਹੋਰ ਚਿੰਨ੍ਹ ਮੋਡ"</string>
