--- a/java/res/values-te/strings-talkback-descriptions.xml
+++ b/java/res/values-te/strings-talkback-descriptions.xml
@@ -45,7 +45,7 @@
     <string name="spoken_description_search" msgid="5099937658231911288">"వెతుకు"</string>
     <string name="spoken_description_dot" msgid="5644176501632325560">"చుక్క"</string>
     <string name="spoken_description_language_switch" msgid="6818666779313544553">"భాషను మార్చండి"</string>
-    <string name="spoken_description_action_next" msgid="431761808119616962">"తదుపరి"</string>
+    <string name="spoken_description_action_next" msgid="431761808119616962">"తర్వాత"</string>
     <string name="spoken_description_action_previous" msgid="2919072174697865110">"మునుపటి"</string>
     <string name="spoken_description_shiftmode_on" msgid="5107180516341258979">"షిఫ్ట్ ప్రారంభించబడింది"</string>
     <string name="spoken_description_shiftmode_locked" msgid="7307477738053606881">"Caps lock ప్రారంభించబడింది"</string>
