Import translations. DO NOT MERGE
Change-Id: Id418d38eb98ab8208f06e5c7af1ca796296937dd
Auto-generated-cl: translation import
Exempt-From-Owner-Approval: translation import

--- a/java/res/values-eu/strings-emoji-descriptions.xml
+++ b/java/res/values-eu/strings-emoji-descriptions.xml
@@ -464,7 +464,7 @@
     <string name="spoken_emoji_1F3B0" msgid="7440244806527891956">"Txanpon-makina"</string>
     <string name="spoken_emoji_1F3B1" msgid="545544382391379234">"Billarra"</string>
     <string name="spoken_emoji_1F3B2" msgid="8302262034774787493">"Dadoa"</string>
-    <string name="spoken_emoji_1F3B3" msgid="5180870610771027520">"Boloak"</string>
+    <string name="spoken_emoji_1F3B3" msgid="5180870610771027520">"Bola-jokoa"</string>
     <string name="spoken_emoji_1F3B4" msgid="4723852033266071564">"Lore-joko japoniarren kartak"</string>
     <string name="spoken_emoji_1F3B5" msgid="1998470239850548554">"Musika-nota"</string>
     <string name="spoken_emoji_1F3B6" msgid="3827730457113941705">"Hainbat musika-nota"</string>
