Import translations. DO NOT MERGE
Auto-generated-cl: translation import

Bug: 69925163
Change-Id: I04fb48059e4b43c0093ff661dc15f7471f58821b

--- a/java/res/values-in/strings-emoji-descriptions.xml
+++ b/java/res/values-in/strings-emoji-descriptions.xml
@@ -856,7 +856,7 @@
     <string name="spoken_emoji_1F514" msgid="7027268683047322521">"Bel"</string>
     <string name="spoken_emoji_1F515" msgid="8903179856036069242">"Bel dengan tanda coret"</string>
     <string name="spoken_emoji_1F516" msgid="108097933937925381">"Bookmark"</string>
-    <string name="spoken_emoji_1F517" msgid="2450846665734313397">"Simbol tautan"</string>
+    <string name="spoken_emoji_1F517" msgid="2450846665734313397">"Simbol link"</string>
     <string name="spoken_emoji_1F518" msgid="7028220286841437832">"Tombol radio"</string>
     <string name="spoken_emoji_1F519" msgid="8211189165075445687">"Tulisan BACK dengan panah ke kiri di atas"</string>
     <string name="spoken_emoji_1F51A" msgid="823966751787338892">"Tulisan END dengan panah ke kiri di atas"</string>
