--- a/java/res/values-ne/strings-talkback-descriptions.xml
+++ b/java/res/values-ne/strings-talkback-descriptions.xml
@@ -49,11 +49,11 @@
     <string name="spoken_description_action_previous" msgid="2919072174697865110">"अघिल्लो"</string>
     <string name="spoken_description_shiftmode_on" msgid="5107180516341258979">"सिफ्ट सक्षम पारिएको छ"</string>
     <string name="spoken_description_shiftmode_locked" msgid="7307477738053606881">"क्याप्स लक सक्षम पारिएको छ"</string>
-    <string name="spoken_description_mode_symbol" msgid="111186851131446691">"प्रतिक ढाँचा"</string>
+    <string name="spoken_description_mode_symbol" msgid="111186851131446691">"प्रतीक ढाँचा"</string>
     <string name="spoken_description_mode_symbol_shift" msgid="4305607977537665389">"थप प्रतीक मोड"</string>
     <string name="spoken_description_mode_alpha" msgid="4676004119618778911">"अक्षर ढाँचा"</string>
     <string name="spoken_description_mode_phone" msgid="2061220553756692903">"फोन ढाँचा"</string>
-    <string name="spoken_description_mode_phone_shift" msgid="7879963803547701090">"फोन प्रतिक मोड"</string>
+    <string name="spoken_description_mode_phone_shift" msgid="7879963803547701090">"फोन प्रतीक मोड"</string>
     <string name="announce_keyboard_hidden" msgid="2313574218950517779">"किबोर्ड लुकाइएको छ"</string>
     <string name="announce_keyboard_mode" msgid="6698257917367823205">"<xliff:g id="KEYBOARD_MODE">%s</xliff:g> किबोर्ड देखाउँदै"</string>
     <string name="keyboard_mode_date" msgid="6597407244976713364">"मिति"</string>
