Import translations. DO NOT MERGE
Change-Id: If570e0e26491142b2b7d51b36765415688cb62c9
Auto-generated-cl: translation import

--- a/java/res/values-ne/strings-emoji-descriptions.xml
+++ b/java/res/values-ne/strings-emoji-descriptions.xml
@@ -539,8 +539,8 @@
     <string name="spoken_emoji_1F3E5" msgid="1350532500431776780">"अस्पताल"</string>
     <string name="spoken_emoji_1F3E6" msgid="342132788513806214">"बैंक"</string>
     <string name="spoken_emoji_1F3E7" msgid="6322352038284944265">"स्वचालित पारंगत मिसिन"</string>
-    <string name="spoken_emoji_1F3E8" msgid="5864918444350599907">"होटल"</string>
-    <string name="spoken_emoji_1F3E9" msgid="7830416185375326938">"मायालु होटल"</string>
+    <string name="spoken_emoji_1F3E8" msgid="5864918444350599907">"होटेल"</string>
+    <string name="spoken_emoji_1F3E9" msgid="7830416185375326938">"मायालु होटेल"</string>
     <string name="spoken_emoji_1F3EA" msgid="5081084413084360479">"सुविधाजनक स्टोर"</string>
     <string name="spoken_emoji_1F3EB" msgid="7010966528205150525">"स्कूल"</string>
     <string name="spoken_emoji_1F3EC" msgid="4845978861878295154">"डिपार्टमेन्ट स्टोर"</string>
