Import translations. DO NOT MERGE
Change-Id: Ie5eaa55a4825ee888251b678c419367ca5110bb8
Auto-generated-cl: translation import

--- a/java/res/values-ne/strings-talkback-descriptions.xml
+++ b/java/res/values-ne/strings-talkback-descriptions.xml
@@ -36,7 +36,7 @@
     <string name="spoken_description_to_symbol" msgid="8244903740201126590">"प्रतिकहरू"</string>
     <string name="spoken_description_to_alpha" msgid="4081215210530031950">"अक्षरहरू"</string>
     <string name="spoken_description_to_numeric" msgid="4560261331530795682">"नम्बरहरू"</string>
-    <string name="spoken_description_settings" msgid="7281251004003143204">"सेटिङ्हरू"</string>
+    <string name="spoken_description_settings" msgid="7281251004003143204">"सेटिङहरू"</string>
     <string name="spoken_description_tab" msgid="8210782459446866716">"ट्याब"</string>
     <string name="spoken_description_space" msgid="5908716896642059145">"स्पेस"</string>
     <string name="spoken_description_mic" msgid="6153138783813452464">"आवाज निवेश"</string>
