Import translations. DO NOT MERGE
Change-Id: I39f0ed6f033cfda9f6c4b6b645cf8961ebd249a2
Auto-generated-cl: translation import

--- a/java/res/values-mr/strings-emoji-descriptions.xml
+++ b/java/res/values-mr/strings-emoji-descriptions.xml
@@ -762,7 +762,7 @@
     <string name="spoken_emoji_1F4B8" msgid="4401099580477164440">"पंखांसह पैसे"</string>
     <string name="spoken_emoji_1F4B9" msgid="647509393536679903">"वरच्या दिशेसह आणि येन चिन्हासह चार्ट"</string>
     <string name="spoken_emoji_1F4BA" msgid="1269737854891046321">"आसन"</string>
-    <string name="spoken_emoji_1F4BB" msgid="6252883563347816451">"वैयक्तिक संगणक"</string>
+    <string name="spoken_emoji_1F4BB" msgid="6252883563347816451">"वैयक्तिक कॉंप्युटर"</string>
     <string name="spoken_emoji_1F4BC" msgid="6182597732218446206">"ब्रीफकेस"</string>
     <string name="spoken_emoji_1F4BD" msgid="5820961044768829176">"छोटीडिस्क"</string>
     <string name="spoken_emoji_1F4BE" msgid="4754542485835379808">"फ्लॉपी डिस्क"</string>
