--- a/java/res/xml/method.xml
+++ b/java/res/xml/method.xml
@@ -115,7 +115,8 @@
 <input-method xmlns:android="http://schemas.android.com/apk/res/android"
         android:settingsActivity="org.futo.inputmethod.latin.settings.SettingsActivity"
         android:isDefault="@bool/im_is_default"
-        android:supportsSwitchingToNextInputMethod="true">
+        android:supportsSwitchingToNextInputMethod="true"
+        android:supportsInlineSuggestions="true">
     <subtype android:icon="@drawable/ic_ime_switcher_dark"
             android:label="@string/subtype_en_US"
             android:subtypeId="0xc9194f98"
