--- a/java/res/xml/method.xml
+++ b/java/res/xml/method.xml
@@ -113,7 +113,7 @@
 <!-- If IME doesn't have an applicable subtype, the first subtype will be used as a default
      subtype.-->
 <input-method xmlns:android="http://schemas.android.com/apk/res/android"
-        android:settingsActivity="org.futo.inputmethod.latin.settings.SettingsActivity"
+        android:settingsActivity="org.futo.inputmethod.latin.uix.settings.SettingsActivity"
         android:isDefault="@bool/im_is_default"
         android:supportsSwitchingToNextInputMethod="true"
         android:supportsInlineSuggestions="true">
