--- a/java/res/values/attrs.xml
+++ b/java/res/values/attrs.xml
@@ -421,6 +421,7 @@
         <attr name="keyTextShadowColor" format="color" />
         <!-- Color to use for the label in a key when in inactivated state. -->
         <attr name="keyTextInactivatedColor" format="color" />
+        <attr name="keyPressedTextColor" format="color" />
         <!-- Color to use for the label in a key that has followFunctionalTextColor keyLabelFlags. -->
         <attr name="functionalTextColor" format="color" />
         <!-- Key hint letter (= one character hint label) color -->
