--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -2,6 +2,9 @@
 <resources>
     <string name="voice_input_action_title">Voice Input</string>
     <string name="theme_switcher_action_title">Theme Switcher</string>
+    <string name="clipboard_action_title">Paste from Clipboard</string>
+    <string name="undo_action_title">Undo</string>
+    <string name="redo_action_title">Redo</string>
 
     <string name="amoled_dark_theme_name">AMOLED Dark Purple</string>
     <string name="classic_material_dark_theme_name">AOSP Material Dark</string>
