--- a/java/res/drawable/arrow_up.xml
+++ b/java/res/drawable/arrow_up.xml
@@ -4,14 +4,14 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M19,12L5,12"
+      android:pathData="M12,19L12,5"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M12,19l-7,-7l7,-7"
+      android:pathData="M5,12l7,-7l7,7"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
