--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -30,4 +30,9 @@
     <string name="update_checking_service">Update Checking service</string>
     <string name="update_available">Update Available</string>
     <string name="update_available_notification">An update is available (<xliff:g name="versionDiff" example="v1 -> v2">%s</xliff:g>). Tap to download</string>
+    <string name="unknown_error">Unknown Error</string>
+    <string name="an_unknown_error_has_occurred">An unknown error has occurred.</string>
+    <string name="model_import_failed">Model import failed</string>
+    <string name="failed_to_import_the_selected_model">Failed to import the selected model</string>
+    <string name="dismiss">Dismiss</string>
 </resources>
