Apply blacklist filter before bothAlgorithmsCameToSameConclusion, allow emoji suggestions after typing a word, allow easily disabling emoji suggestions through long-tapping

--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -39,5 +39,6 @@
 
     <string name="blacklist">Blacklist</string>
     <string name="blacklist_from_suggestions">Blacklist \"%1$s\" from being suggested?</string>
+    <string name="disable_emoji">Disable emoji suggestions</string>
     <string name="try_typing">Try typing here…</string>
 </resources>
