--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -41,4 +41,5 @@
     <string name="blacklist_from_suggestions">Blacklist \"%1$s\" from being suggested?</string>
     <string name="disable_emoji">Disable emoji suggestions</string>
     <string name="try_typing">Try typing here…</string>
+    <string name="externally_imported_model">Externally imported model</string>
 </resources>
