Disable emoji key appearing in instant messagers

--- a/java/res/xml/key_styles_enter.xml
+++ b/java/res/xml/key_styles_enter.xml
@@ -247,13 +247,13 @@
         </case>
         <!-- Smiley in textShortMessage field.
              This <case> should be after Shift + Enter <case> and before any of action <case>. -->
-        <case
+        <!--<case
             latin:mode="im"
         >
             <key-style
                 latin:styleName="enterKeyStyle"
                 latin:parentStyle="emojiKeyStyle" />
-        </case>
+        </case>-->
         <case
             latin:imeAction="actionGo"
         >
