--- a/java/res/xml/key_styles_common.xml
+++ b/java/res/xml/key_styles_common.xml
@@ -125,10 +125,9 @@
         latin:altCode="!code/key_space"
         latin:backgroundType="functional" />
     <key-style
-        latin:styleName="languageSwitchKeyStyle"
-        latin:keySpec="!icon/language_switch_key|!code/key_language_switch"
-        latin:keyActionFlags="noKeyPreview|altCodeWhileTyping|enableLongPress"
-        latin:altCode="!code/key_space" />
+        latin:styleName="bottomEmojiKeyStyle"
+        latin:keySpec="!icon/emoji_action_key|!code/key_emoji"
+        latin:keyActionFlags="noKeyPreview" />
     <key-style
         latin:styleName="tabKeyStyle"
         latin:keySpec="!icon/tab_key|!code/key_tab"
