--- a/java/res/values/attrs.xml
+++ b/java/res/values/attrs.xml
@@ -499,7 +499,7 @@
         <attr name="passwordInput" format="boolean" />
         <attr name="clobberSettingsKey" format="boolean" />
         <attr name="hasShortcutKey" format="boolean" />
-        <attr name="languageSwitchKeyEnabled" format="boolean" />
+        <attr name="bottomEmojiKeyEnabled" format="boolean" />
         <attr name="isMultiLine" format="boolean" />
         <attr name="imeAction" format="enum">
             <!-- This should be aligned with
