--- a/java/res/xml-sw600dp/key_styles_common.xml
+++ b/java/res/xml-sw600dp/key_styles_common.xml
@@ -100,7 +100,7 @@
         latin:backgroundType="functional" />
     <key-style
         latin:styleName="bottomEmojiKeyStyle"
-        latin:keySpec="!icon/emoji_action_key|!code/key_emoji"
+        latin:keySpec="!icon/emoji_normal_key|!code/key_emoji"
         latin:keyActionFlags="noKeyPreview" />
     <key-style
         latin:styleName="emojiKeyStyle"
